	filterfalse.

	Added pattern ORing for :file[x]type and :fileviewer commands implemented
	as a comma-separated list.  Thanks to filterfalse.

	Added heuristic that uses null byte as separator for file lists if there
	is at least one such byte, otherwise normal line separators are used.
	This affects :[un]select, `vifm -`, %u, %U, %m and %M.  Thanks to
	filterfalse.

	Changed order of initialization to perform autocommands before startup
	commands on launch.

	Changed type of 'confirm' option.  Now it's a set that picks which
	operations should be confirmed.  Thanks to Losiara and mvucBmM0.

	Changed ga/gA effect on ".." entry to calculate size of current directory.
	Thanks to aleksejrs.

	Do not reset completion on terminal resize.

	Expand environment variables for :edit.  Thanks to filterfalse.

	Don't print just table header on `:cabbr something`, print message that no
	matches found instead.

	Display <c-h> as <bs> only at the beginning of key sequence.

	Better terminal buffer title for plugin in neovim.  Thanks to
	randomizedthinking.

	Enabled wildmenu for menus.

	Skip UTF-8 BOM for file preview.

	Allow suffixes and prefixes in 'classify' to be of up to eight characters
	in length.  Thanks to elricbk.

	Use original (before custom view) cursor position on :sync! in custom
	views.  Thanks to filterfalse.

	Never add parent entry (..) to very custom view (%U).  Thanks to
	filterfalse.

	Removed caret escaping on Windows...  Thanks to Reva Revadigar.

	Silently ignore tries to remove parent entry (..).  Thanks to aleksejrs.

	A bit better delete confirmation messages with number of files to be
	deleted.

	Improved syntax highlighting of patterns.

	Automatically update custom view entries on rename of their parent
	directory in the save custom view.

	Fixed kind of a duplicate of first history element on =.

	Fixed displaying size for symbolic links to directories on changing views
	and determining whether they point to a directory in custom views.
